--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron:dev": "concurrently \"NODE_ENV=development vite dev\" \"wait-on tcp:3000 && electron .\"",
+    "electron:build": "vite build && electron-builder"
   },
   "dependencies": {
     "classnames": "^2.5.1",
@@ -21,6 +23,9 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "concurrently": "^8.2.2",
+    "electron": "^29.1.0",
+    "electron-builder": "^24.13.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
@@ -28,6 +33,8 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10",
-    "vite-plugin-svgr": "^4.3.0"
-  }
+    "vite-plugin-svgr": "^4.3.0",
+    "wait-on": "^7.2.0"
+  },
+  "main": "electron/main.js"
 }
